# RoboPoint

./: .dockerignore  .gitignore  README.md  environment_setup.sh  pyproject.toml
robopoint/: conversation.py  mm_utils.py  utils.py
robopoint/eval/: gpt_vqa.py  model_vqa.py  run_llava.py  summarize_vqa.py  visualize_vqa.py
robopoint/model/: apply_delta.py  builder.py  consolidate.py  llava_arch.py  make_delta.py
robopoint/model/language_model/: llava_llama.py  llava_mistral.py  llava_mpt.py
robopoint/serve/: cli.py  controller.py  gradio_web_server.py  model_worker.py  sglang_worker.py  test_message.py
robopoint/train/: train.py  train_mem.py  train_xformers.py
scripts/: finetune_llama2.sh  finetune_vicuna.sh  lora_llama2.sh  lora_vicuna.sh  pretrain.sh
